Update index.html for 飞牛OS installation guide

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>一键安装 XFCE（官方最轻量版本） - 可复制单页指南</title>
+  <title>飞牛OS一键安装 XFCE（官方最轻量版本）</title>
   <style>
     :root{
       --bg:#0f1720; --card:#0b1220; --muted:#9aa4b2; --accent:#7dd3fc; --glass:rgba(255,255,255,0.04);
@@ -270,3 +270,4 @@ sudo systemctl start NetworkManager
   </script>
 </body>
 </html>
+
