--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>冰凝之境 - 渐变配色工具</title>
+    <title>渐变配色工具</title>
     <style>
         * {
             margin: 0;
@@ -477,3 +477,4 @@
     </script>
 </body>
 </html>
+
